fixed spacing

--- a/static/css/styles/components/_header.css
+++ b/static/css/styles/components/_header.css
@@ -1,21 +1,24 @@
 /*----------  Header  ----------*/
 .sr-header {
-    margin-bottom: 32px;
-    text-align: center
+    margin-bottom: 20px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
   }
   
   .sr-header__title {
     color: var(--p);
-    margin: 20px 0;
+    margin: 0;
     font: 600 24px var(--f)
   }
   
   .sr-header__logo {
-    height: 24px;
+    height: 30px;
     background-size: contain;
     background-repeat: no-repeat;
     width: 100%;
-    margin-bottom: 24px;
+    margin: 0;
     text-align: center
   }
   
